fixing overflow

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,47 +1,3 @@
-.vc-container {
-  font-family: Poppins !important;
-  border: none !important;
-
-  .vc-title {
-    font-weight: 500 !important;
-  }
-
-  .vc-weekday {
-    font-weight: 500 !important;
-  }
-
-  .vc-grid-container {
-    gap: 8px 0px !important;
-  }
-
-  .vc-dots {
-    bottom: -5px;
-    position: absolute;
-  }
-
-  .vc-header,
-  .vc-arrows-container {
-    padding-top: 1.5em !important;
-    padding-bottom: 1.5em !important;
-  }
-
-  .vc-day-content {
-    cursor: pointer;
-    border-radius: 0.25rem;
-    height: 38px;
-    width: 38px;
-
-    &:focus {
-      background: #6699ff;
-      color: #ffffff;
-    }
-  }
-}
-
-.daterangepicker {
-  z-index: 1002;
-}
-
 @media (max-width: 991.98px) {
   [data-offcanvas-offcanvas='on'] {
     overflow: scroll !important;
@@ -128,7 +84,17 @@
   border-bottom-right-radius: 0 !important;
 }
 
+body,
+html {
+  overflow-x: hidden;
+}
+
+.daterangepicker {
+  z-index: 1035;
+}
+
 @import './module/vuejs-datepicker';
 @import './module/bootstrap';
 @import './module/ps';
 @import './module/crud';
+@import './module/vcalendar';
